--- a/static/styles.css
+++ b/static/styles.css
@@ -1,18 +1,34 @@
+
+.hero.is-dark .title{
+
+    font-size: 50px;
+
+}
+
 .control.has-icons-left .icon, .control.has-icons-right .icon{
 
     height: 2.55em;
 }
 
+#bar-sup{
+
+    display: grid;
+    grid-template-columns: 50% 50%;
+    margin-bottom: 10px;
+}
+
 #container-grid-title #action-grid-title{
 
     display: grid;
-    grid-template-columns: 70% 10% 20%;
+    grid-template-columns: 50% 16% 16% 16%;
     text-align: left;
     padding: 10px;
-    box-shadow: 0px 0px 10px #333;
-    border-radius: 10px;
-    background-color: rgb(129, 196, 255);
-    margin-bottom: 20px;
+    border-bottom: 1px solid #333;
+    background-color: #ccc;
+    color: #333;
+    padding-left: 15px;
+    font-weight: bold;
+    
     
 }
 
@@ -20,30 +36,58 @@
 #container-grid #action-grid{
 
     display: grid;
-    grid-template-columns: 70% 10% 20%;
+    grid-template-columns: 50% 16% 16% 16%;
     text-align: left;
     padding: 10px;
-    box-shadow: 0px 0px 10px #333;
-    border-radius: 10px;
-    background-color: rgb(129, 196, 255);
+    background-color: white;
+}
+
+#container-grid-title #action-grid-title-1{
+
+    display: grid;
+    grid-template-columns: 33% 33% 33%;
+    text-align: left;
+    padding: 10px;
+    border-bottom: 1px solid #333;
+    background-color: #ccc;
+    color: #333;
+    padding-left: 15px;
+    font-weight: bold;
+    
+    
+}
+
+
+#container-grid #action-grid-1{
+
+    display: grid;
+    grid-template-columns: 33% 33% 33%;
+    text-align: left;
+    padding: 10px;
+    background-color: white;
 }
 
 .name{
 
     border-bottom: 1px solid #ccc;
+    border-right: 1px solid #ccc;
     padding: 5px;
+    color: #333;
 }
 
 .status{
 
     border-bottom: 1px solid #ccc;
     padding: 5px;
+    
 }
 
 .date{
 
     border-bottom: 1px solid #ccc;
     padding: 5px;
+    border-left: 1px solid #ccc;
+    color: #333;
 }
 
 .exit{
@@ -51,3 +95,27 @@
     margin-top: 40px;
 }
 
+#filters{
+
+    display: grid;
+    grid-template-columns: 50% 50%;
+}
+
+
+#filter{
+    
+    text-align: right;
+}
+
+#filters-2{
+
+    display: grid;
+    grid-template-columns: 44% 56%;
+}
+
+#filter-2{
+    
+    display: grid;
+    grid-template-columns: 50% 50%;
+    text-align: right;
+}
